--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.4.0",
+    "@reduxjs/toolkit": "^2.2.5",
     "axios": "^1.7.0",
     "json-server": "^1.0.0-beta.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.4",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
+    "redux-persist": "^6.0.0",
     "yup": "^1.4.0"
   },
   "devDependencies": {
