--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@reduxjs/toolkit": "^2.2.5",
     "axios": "^1.7.0",
     "json-server": "^1.0.0-beta.0",
+    "path-to-regexp": "^6.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.4",
